--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "lorem-ipsum": "^2.0.3",
+    "faker": "^5.1.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
